@@ -16,6 +16,7 @@
 [add] send PlaybackInit, PlaybackStarted, PlaybackStopped notifications containing video id, channel id, and the status of the playing video
 [fix] allow playback regardless of API status
     - fixes playback for strm, playlists, other add-ons, and sharing videos from devices
+[fix] finding player config, allow playback to continue when not found if possible
 [fix] fix possible loop due to invalid keys and login information
 [fix] fix playback of mpeg-dash streams if HTTP Server - Listen on IP is blank
 [upd] use a dialog to notify users of API key requirements with link to wiki
